force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Audit Log</label>
    <pluralLabel>Audit Logs</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>AUD-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Immutable audit trail for all SFOps actions including deployments, scans, and configuration changes</description>
</CustomObject>