force-app/main/default/objects/Audit_Log__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Deploy</fullName><default>false</default><label>Deploy</label></value>
            <value><fullName>Rollback</fullName><default>false</default><label>Rollback</label></value>
            <value><fullName>Scan</fullName><default>false</default><label>Scan</label></value>
            <value><fullName>ConfigChange</fullName><default>false</default><label>ConfigChange</label></value>
            <value><fullName>Access</fullName><default>false</default><label>Access</label></value>
            <value><fullName>Login</fullName><default>false</default><label>Login</label></value>
            <value><fullName>DataExport</fullName><default>false</default><label>DataExport</label></value>
            <value><fullName>Override</fullName><default>false</default><label>Override</label></value>
            <value><fullName>Delete</fullName><default>false</default><label>Delete</label></value>
            <value><fullName>Error</fullName><default>false</default><label>Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>