force-app/main/default/objects/Audit_Log__c/fields/Component_Count__c.field-meta.xml
<CustomField>
    <fullName>Component_Count__c</fullName>
    <label>Component Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>