force-app/main/default/objects/Audit_Log__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <label>Deployment</label>
    <type>Lookup</type>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipName>Audit_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>